# cpp-neural-network

./: .gitignore  CMakeLists.txt  Layer.cpp  MNISTReader.h  Matrix.cpp  Matrix.h  README.md  main.cpp  train_model.py
docs/: index.html  network.data  network.js
include/: Layer.h  Matrix.h  Network.h
src/: MNISTReader.cpp  Matrix.cpp  Network.cpp  bindings.cpp  main.cpp
web/: index.html  main.js  network.js  network.wasm
